--- a/resources/frontend/app/public/index.html
+++ b/resources/frontend/app/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="csrf-token" content="{{ csrf_token() }}">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>app</title>
+    <title>Larabase</title>
   </head>
   <body>
     <noscript>
